Changes file for Business::GL::Postalcode

0.01 2014.08.06 - Initial release

- Implementing the following features:

    - Data container for postalcodes from Greenland (GL)